# ups-server-c

./: CMakeLists.txt  Makefile  definitions.h  game.c  game.h  lobby.c  lobby.h  main.c  player.c  player.h  s_header.c  s_header.h  ser_buffer.c  ser_buffer.h  server.c  server.h  socket_utils.c  socket_utils.h  tcp_server  word_generator.c  word_generator.h
model/: canvas.c  canvas.h  player.c  player.h  word_generator.c  word_generator.h
resources/: words.txt
shared/: definitions.h  sock_header.c  sock_header.h
temp/: client  client.c  client.h  myapp
utils/: debug.c  debug.h  serialization.c  serialization.h  sock_header.h  sock_utils.c  sock_utils.h  stream_handlers.c  stream_handlers.h
